--- a/index.html
+++ b/index.html
@@ -233,10 +233,14 @@
             <label for="rayon" class="required">Quel est votre rayon d'intervention ?</label>
             <select id="rayon" name="rayon">
               <option value="">-- sélectionnez --</option>
-              <option>0-5 km</option>
-              <option>5-15 km</option>
-              <option>15-30 km</option>
-              <option>30+ km</option>
+              <option>Aucun - en cabinet</option>
+              <option>10 km</option>
+              <option>15 km</option>
+              <option>20 km</option>
+              <option>25 km</option>
+              <option>30 km</option>
+              <option>40 km</option>
+              <option>Tout mon département</option>
             </select>
           </div>
 
