--- a/index.html
+++ b/index.html
@@ -168,7 +168,6 @@
 
             <label for="phone">Téléphone (optionnel)</label>
             <input id="phone" name="phone" type="tel" placeholder="0X XX XX XX XX ou +33..."/>
-            <div class="small">Numéro France métropole : 10 chiffres ; outre-mer : parfois 10+ chiffres. +33... accepté.</div>
           </div>
 
           <!-- Section 2 : Profession -->
@@ -242,6 +241,7 @@
               <option>40 km</option>
               <option>Tout mon département</option>
             </select>
+            <div class="small">Si vous intervenez uniquement en cabinet, sélectionnez "Aucun - en cabinet".</div>
           </div>
 
           <!-- Section 5 : Disponibilités -->
@@ -260,7 +260,6 @@
             <div id="dateBlock" class="hidden">
               <label for="dateDispo" class="required">À partir de quelle date êtes-vous disponible ?</label>
               <input id="dateDispo" name="dateDispo" type="date"/>
-              <div class="small">La première date disponible est aujourd'hui.</div>
             </div>
           </div>
 
