--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
 <body>
   <div class="wrap">
     <div class="card">
-      <h1>Questionnaire — Mise en relation (professionnels)</h1>
+      <h1>Référencement de professionnels spécialisés TSA</h1>
+      <h2>Renseignez ou actualisez vos informations pour que les particuliers puissent vous trouver selon votre secteur d'intervention, vos disponibilités et le public que vous accompagnez</h2>
       <p class="lead">Commencez par vérifier votre e-mail — un code sera envoyé. Si vous avez déjà rempli le formulaire auparavant, il sera pré-rempli.</p>
       <p class="small" style="margin-top:-16px;margin-bottom:16px">Les champs marqués d'un <span style="color:#dc2626;font-weight:700">*</span> sont obligatoires.</p>
 
