--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   .wrap{max-width:980px;margin:18px auto}
   .card{background:var(--card);border-radius:16px;padding:32px 36px;box-shadow:0 8px 30px rgba(2,6,23,0.06)}
   h1{margin:0 0 8px;font-size:24px;color:#0f1724}
-  h2{margin:0 0 24px;color:var(--muted);font-size:15px;font-weight:400;line-height:1.6}
+  h2{margin:0 0 24px;color:var(--muted);font-size:17px;font-weight:400;line-height:1.6}
   p.lead{margin:0 0 24px;color:var(--muted);font-size:15px}
   
   label{display:block;margin-top:24px;font-weight:600;color:#0f1724;font-size:15px}
@@ -130,7 +130,7 @@
   <div class="wrap">
     <div class="card">
       <h1>Référencement de professionnels spécialisés TSA</h1>
-      <h2>Renseignez ou actualisez vos informations pour que les particuliers puissent vous trouver selon votre secteur d'intervention, vos disponibilités et le public que vous accompagnez</h2>
+      <h2>Renseignez ou actualisez vos informations pour que les particuliers puissent vous trouver selon votre secteur d'intervention, vos disponibilités et le public que vous accompagnez.</h2>
       <p class="lead">Commencez par vérifier votre e-mail — un code sera envoyé. Si vous avez déjà rempli le formulaire auparavant, il sera pré-rempli.</p>
       <p class="small" style="margin-top:-16px;margin-bottom:16px">Les champs marqués d'un <span style="color:#dc2626;font-weight:700">*</span> sont obligatoires.</p>
 
