--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
             </select>
 
             <label style="margin-top:24px" class="required">Auprès de quel(s) public(s) intervenez-vous ?</label>
+            <div class="small" style="margin-top:4px">Vous pouvez sélectionner plusieurs réponses.</div>
             <div style="margin-top:12px">
               <label><input type="checkbox" name="public" value="0-6"> Enfants (0-6 ans)</label>
               <label><input type="checkbox" name="public" value="7-12"> Enfants (7-12 ans)</label>
@@ -229,6 +230,7 @@
           </div>
           
           <label class="required">Quel(s) sont vos modes d'intervention ?</label>
+          <div class="small" style="margin-top:4px">Vous pouvez sélectionner plusieurs réponses.</div>
           <div style="margin-top:12px">
             <label><input type="checkbox" name="mode" value="domicile"> Se déplace à domicile</label>
             <label><input type="checkbox" name="mode" value="cabinet"> En cabinet</label>
