--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
     <div class="card">
       <h1>Référencement de professionnels spécialisés TSA</h1>
       <h2>Renseignez ou actualisez vos informations pour que les particuliers puissent vous trouver selon votre secteur d'intervention, vos disponibilités et le public que vous accompagnez.</h2>
+      <!-- 🆕 ZONE ADMIN QUOTA -->
+      <div id="adminQuota" style="display:none; background:#fff3cd; border:2px solid #ffc107; padding:16px; border-radius:8px; margin-bottom:20px;">
+        <strong>📊 Admin - Quota emails :</strong> 
+        <span id="quotaDisplay">Chargement...</span>
+        <button id="refreshQuota" type="button" style="padding:6px 12px; font-size:13px; margin-left:10px;">🔄 Actualiser</button>
+      </div>
       <p class="lead">Commencez par vérifier votre e-mail — un code sera envoyé. Si vous avez déjà rempli le formulaire auparavant, il sera pré-rempli.</p>
       <p class="small" style="margin-top:-16px;margin-bottom:16px">Les champs marqués d'un <span style="color:#dc2626;font-weight:700">*</span> sont obligatoires.</p>
 
@@ -671,6 +677,66 @@ resetBtn.addEventListener('click', () => {
   noNum.classList.add("hidden");
   submitMsg.textContent = "";
 });
+
+  /* ========== ADMIN QUOTA DISPLAY ========== */
+const ADMIN_EMAIL = "plateforme.lien.pro@gmail.com"; // 🔧 Changez si besoin
+
+async function checkAndDisplayQuota() {
+  try {
+    const r = await fetch(`${SCRIPT_URL}?action=checkQuota`);
+    const j = await r.json();
+    
+    if (j.ok) {
+      const quotaDisplay = document.getElementById("quotaDisplay");
+      const percentColor = j.percentUsed > 80 ? "#dc2626" : j.percentUsed > 50 ? "#f59e0b" : "#059669";
+      
+      quotaDisplay.innerHTML = `
+        <span style="color:${percentColor}; font-weight:700;">${j.remaining}/${j.total}</span> 
+        restants (${j.used} utilisés - ${j.percentUsed}%)
+        ${j.warning ? `<br><small style="color:#6b7280;">${j.warning}</small>` : ''}
+      `;
+    } else {
+      document.getElementById("quotaDisplay").textContent = "❌ Erreur : " + (j.error || "impossible de charger");
+    }
+  } catch (err) {
+    document.getElementById("quotaDisplay").textContent = "❌ Erreur réseau";
+  }
+}
+
+// Vérifier si c'est l'admin et afficher le quota
+function initAdminMode() {
+  const adminQuotaDiv = document.getElementById("adminQuota");
+  const currentEmail = (emailEl.value || "").trim().toLowerCase();
+  
+  // Vérifier régulièrement si l'email admin est entré
+  const checkEmail = () => {
+    const email = (emailEl.value || "").trim().toLowerCase();
+    if (email === ADMIN_EMAIL.toLowerCase()) {
+      adminQuotaDiv.style.display = "block";
+      checkAndDisplayQuota();
+    } else {
+      adminQuotaDiv.style.display = "none";
+    }
+  };
+  
+  // Vérifier à chaque changement d'email
+  emailEl.addEventListener("input", checkEmail);
+  emailEl.addEventListener("blur", checkEmail);
+  
+  // Vérifier au chargement
+  checkEmail();
+}
+
+// Bouton refresh quota
+document.getElementById("refreshQuota").addEventListener("click", () => {
+  document.getElementById("quotaDisplay").textContent = "Chargement...";
+  checkAndDisplayQuota();
+});
+
+// Initialiser au chargement de la page
+initAdminMode();
+```
+---
 
 </script>
 </body>
