--- a/index.html
+++ b/index.html
@@ -392,8 +392,15 @@ sendCodeBtn.addEventListener("click", async () => {
     
     // Si vraiment ok
     if (j.ok) {
-      emailMsg.innerHTML = `<span style="color:#059669;font-weight:600">✓ Code envoyé avec succès</span><br>
-        <span style="color:#6b7280">Vérifiez votre boîte mail (pensez aux spams).</span>`;
+      // Vérifier si c'est un code déjà envoyé ou un nouveau code
+      if (j.alreadySent) {
+        emailMsg.innerHTML = `<span style="color:#f59e0b;font-weight:600">ℹ️ Code déjà envoyé</span><br>
+          <span style="color:#6b7280">Un code vous a déjà été envoyé il y a moins de 15 minutes. Le code est encore valable. Vérifiez votre boîte mail (pensez aux spams).</span>`;
+      } else {
+        emailMsg.innerHTML = `<span style="color:#059669;font-weight:600">✓ Code envoyé avec succès</span><br>
+          <span style="color:#6b7280">Vérifiez votre boîte mail (pensez aux spams).</span>`;
+      }
+      
       CURRENT_EMAIL = mail;
       codeArea.classList.remove("hidden");
       codeEl.focus();
@@ -409,6 +416,7 @@ sendCodeBtn.addEventListener("click", async () => {
   }
 });
 
+// permet d'appuyer sur Entrée)
 emailEl.addEventListener("keypress", (e) => {
   if (e.key === "Enter") {
     e.preventDefault();
