--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
           </div>
 
           <div class="actions">
-            <button id="submit" type="button">✓ Valider mon inscription</button>
+            <button id="submit" type="button">✓ Valider mon inscription ou les modifications</button>
             <button id="resetBtn" type="button" class="btn-ghost">Réinitialiser</button>
           </div>
           <div id="submitMsg" class="small"></div>
