--- a/index.html
+++ b/index.html
@@ -131,12 +131,14 @@
     <div class="card">
       <h1>Référencement de professionnels spécialisés TSA</h1>
       <h2>Renseignez ou actualisez vos informations pour que les particuliers puissent vous trouver selon votre secteur d'intervention, vos disponibilités et le public que vous accompagnez.</h2>
-      <!-- 🆕 ZONE ADMIN QUOTA -->
-      <div id="adminQuota" style="display:none; background:#fff3cd; border:2px solid #ffc107; padding:16px; border-radius:8px; margin-bottom:20px;">
+      
+      <!-- 🆕 ZONE ADMIN QUOTA  : pas utilisée pour le moment --> 
+     <!--> <div id="adminQuota" style="display:none; background:#fff3cd; border:2px solid #ffc107; padding:16px; border-radius:8px; margin-bottom:20px;">
         <strong>📊 Admin - Quota emails :</strong> 
         <span id="quotaDisplay">Chargement...</span>
         <button id="refreshQuota" type="button" style="padding:6px 12px; font-size:13px; margin-left:10px;">🔄 Actualiser</button>
-      </div>
+      </div> <!--> 
+      
       <p class="lead">Commencez par vérifier votre e-mail — un code sera envoyé. Si vous avez déjà rempli le formulaire auparavant, il sera pré-rempli.</p>
       <p class="small" style="margin-top:-16px;margin-bottom:16px">Les champs marqués d'un <span style="color:#dc2626;font-weight:700">*</span> sont obligatoires.</p>
 
