--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@
               <option>40 km</option>
               <option>Tout mon département</option>
             </select>
+            <a href="visualisation.html" target="_blank" style="display:inline-block;margin-top:8px;color:var(--primary);text-decoration:none;font-size:14px;font-weight:600;">
+              🗺️ Visualiser les communes couvertes par mon rayon
+            </a>
             <div class="small">Si vous intervenez uniquement en cabinet, sélectionnez "Aucun - en cabinet".</div>
           </div>
 
