--- a/visualisation.html
+++ b/visualisation.html
@@ -194,7 +194,7 @@
 
     <label for="rayon">Rayon d'intervention (km)</label>
     <select id="rayon">
-      <option value="">-- sélectionnez --</option>
+      <option value="">--Sélectionnez votre rayon d'intervention--</option>
       <option value="10">10 km</option>
       <option value="15">15 km</option>
       <option value="20">20 km</option>
