--- a/index.html
+++ b/index.html
@@ -456,6 +456,7 @@ function lockForm() {
   // Masquer TOUT sauf la bannière
   rest.style.display = 'none';
   document.querySelector('.prereq-section').style.display = 'none';
+  newUserMessage.style.display = 'none';
   
   // Masquer le titre, sous-titre et section email (avant le form)
   document.querySelector('h1').style.display = 'none';
